{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 242,
  "lineage": "741c4081-c7f8-c852-6994-3da0cc96f866",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:network-interface/eni-0d55659195d5b8fef",
            "id": "eni-0d55659195d5b8fef",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:0a:61:41:01:53",
            "owner_id": "515966510834",
            "private_dns_name": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0725a4e3c5ec54036"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e43467c30a040d69",
            "tags": {
              "Name": "eni-for-db-access"
            },
            "tags_all": {
              "Name": "eni-for-db-access"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.instance_sg",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "app_to_db_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055ccf89fc65113322032403852",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-055ccf89fc6511332",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.app_to_db",
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_2.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09843e86c559c64dd2032403852",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09843e86c559c64dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.app_to_db",
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_2.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ea63a55c7381dd4c2032403852",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ea63a55c7381dd4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.app_to_db",
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "db_to_app_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d07fd76c21cf3c1179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04d07fd76c21cf3c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.app_to_db",
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3ddcedaae021a3f179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3ddcedaae021a3f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.app_to_db",
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0db8563bb1cfdeef5",
            "peer_owner_id": "515966510834",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ac3a3a44d3f9a1ad",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "app-db-peering"
            },
            "tags_all": {
              "Name": "app-db-peering"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966510834:loadbalancer/app/vpc-1-alb/91f8496714dc2279",
            "arn_suffix": "app/vpc-1-alb/91f8496714dc2279",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vpc-1-alb-849219512.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966510834:loadbalancer/app/vpc-1-alb/91f8496714dc2279",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc-1-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-07d359edceefe8fd1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e6425a9d748e8d9"
              },
              {
                "subnet_id": "subnet-0aed2ad687c464c4f"
              },
              {
                "subnet_id": "subnet-0fd83ed712c10b1a9"
              }
            ],
            "subnets": [
              "subnet-07e6425a9d748e8d9",
              "subnet-0aed2ad687c464c4f",
              "subnet-0fd83ed712c10b1a9"
            ],
            "vpc_id": "vpc-0c910834ec6b10460",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966510834:listener/app/vpc-1-alb/91f8496714dc2279/758bcb40547ebd62",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:515966510834:targetgroup/vpc1-tg/b599f5de3152c5e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966510834:listener/app/vpc-1-alb/91f8496714dc2279/758bcb40547ebd62",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:515966510834:loadbalancer/app/vpc-1-alb/91f8496714dc2279",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.loadbalancer.aws_lb.app_lb",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966510834:targetgroup/vpc1-tg/b599f5de3152c5e3",
            "arn_suffix": "targetgroup/vpc1-tg/b599f5de3152c5e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/phpinfo.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966510834:targetgroup/vpc1-tg/b599f5de3152c5e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:515966510834:loadbalancer/app/vpc-1-alb/91f8496714dc2279"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vpc1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-07d359edceefe8fd1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d359edceefe8fd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250922052155309200000008",
            "name_prefix": "terraform-",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-0d22669a19ea9e705",
            "description": "Allow inbound traffic for Aurora DB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22669a19ea9e705",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0725a4e3c5ec54036"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.instance_sg",
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-0725a4e3c5ec54036",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0725a4e3c5ec54036",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d359edceefe8fd1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2025092205220372050000000e",
            "name_prefix": "terraform-",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_1.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-0b513cc5b2e16617a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b513cc5b2e16617a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0725a4e3c5ec54036"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-mysql-sg"
            },
            "tags_all": {
              "Name": "rds-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.instance_sg",
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:network-acl/acl-0cc131ae34f1f0fd5",
            "default_network_acl_id": "acl-0cc131ae34f1f0fd5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cc131ae34f1f0fd5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "515966510834",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-05250494802d83d1d",
              "subnet-07e6425a9d748e8d9",
              "subnet-0a4f1245df58eb322",
              "subnet-0aed2ad687c464c4f",
              "subnet-0e43467c30a040d69",
              "subnet-0fd83ed712c10b1a9"
            ],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-096e5e090be5197a4",
            "default_route_table_id": "rtb-096e5e090be5197a4",
            "id": "rtb-096e5e090be5197a4",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-08894a54c69cfa023",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08894a54c69cfa023",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fedb9ff807e6c7ad",
            "arn": "arn:aws:ec2:us-east-1:515966510834:elastic-ip/eipalloc-0fedb9ff807e6c7ad",
            "association_id": "eipassoc-0512ea33d4d180da9",
            "domain": "vpc",
            "id": "eipalloc-0fedb9ff807e6c7ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00bf1e015cf25d44a",
            "private_dns": "ip-10-0-101-76.ec2.internal",
            "private_ip": "10.0.101.76",
            "public_dns": "ec2-54-84-12-102.compute-1.amazonaws.com",
            "public_ip": "54.84.12.102",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05344d9565da3dcfa",
            "arn": "arn:aws:ec2:us-east-1:515966510834:elastic-ip/eipalloc-05344d9565da3dcfa",
            "association_id": "eipassoc-02ce01a2861edd595",
            "domain": "vpc",
            "id": "eipalloc-05344d9565da3dcfa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010e1db70009bba5f",
            "private_dns": "ip-10-0-102-214.ec2.internal",
            "private_ip": "10.0.102.214",
            "public_dns": "ec2-54-167-105-139.compute-1.amazonaws.com",
            "public_ip": "54.167.105.139",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541a174cc27a7891",
            "arn": "arn:aws:ec2:us-east-1:515966510834:elastic-ip/eipalloc-0541a174cc27a7891",
            "association_id": "eipassoc-02cd066a5d78365a9",
            "domain": "vpc",
            "id": "eipalloc-0541a174cc27a7891",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cc3363ba3da16664",
            "private_dns": "ip-10-0-103-208.ec2.internal",
            "private_ip": "10.0.103.208",
            "public_dns": "ec2-54-147-202-131.compute-1.amazonaws.com",
            "public_ip": "54.147.202.131",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:internet-gateway/igw-0d62a7f57026d7aa7",
            "id": "igw-0d62a7f57026d7aa7",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fedb9ff807e6c7ad",
            "association_id": "eipassoc-0512ea33d4d180da9",
            "connectivity_type": "public",
            "id": "nat-04bc5dbc9cfd82f54",
            "network_interface_id": "eni-00bf1e015cf25d44a",
            "private_ip": "10.0.101.76",
            "public_ip": "54.84.12.102",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e6425a9d748e8d9",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05344d9565da3dcfa",
            "association_id": "eipassoc-02ce01a2861edd595",
            "connectivity_type": "public",
            "id": "nat-0d816dbd7c610bdab",
            "network_interface_id": "eni-010e1db70009bba5f",
            "private_ip": "10.0.102.214",
            "public_ip": "54.167.105.139",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd83ed712c10b1a9",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541a174cc27a7891",
            "association_id": "eipassoc-02cd066a5d78365a9",
            "connectivity_type": "public",
            "id": "nat-0a19299e6ba9c6293",
            "network_interface_id": "eni-0cc3363ba3da16664",
            "private_ip": "10.0.103.208",
            "public_ip": "54.147.202.131",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aed2ad687c464c4f",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055ccf89fc65113321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04bc5dbc9cfd82f54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-055ccf89fc6511332",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_nat_gateway.this",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09843e86c559c64dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d816dbd7c610bdab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09843e86c559c64dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_nat_gateway.this",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ea63a55c7381dd4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a19299e6ba9c6293",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ea63a55c7381dd4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_eip.nat",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_nat_gateway.this",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d62a7f57026d7aa7",
            "id": "r-rtb-0873d34119ec600451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0873d34119ec60045",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-055ccf89fc6511332",
            "id": "rtb-055ccf89fc6511332",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bc5dbc9cfd82f54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
              }
            ],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-09843e86c559c64dd",
            "id": "rtb-09843e86c559c64dd",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d816dbd7c610bdab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
              }
            ],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-0ea63a55c7381dd4c",
            "id": "rtb-0ea63a55c7381dd4c",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a19299e6ba9c6293",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
              }
            ],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-0873d34119ec60045",
            "id": "rtb-0873d34119ec60045",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d62a7f57026d7aa7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c4b5f04ed0449fb",
            "region": "us-east-1",
            "route_table_id": "rtb-055ccf89fc6511332",
            "subnet_id": "subnet-0e43467c30a040d69"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f8c8bf08d9e63e",
            "region": "us-east-1",
            "route_table_id": "rtb-09843e86c559c64dd",
            "subnet_id": "subnet-0a4f1245df58eb322"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022ba74702c9d6fa3",
            "region": "us-east-1",
            "route_table_id": "rtb-0ea63a55c7381dd4c",
            "subnet_id": "subnet-05250494802d83d1d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a914aa7f7acaabd8",
            "region": "us-east-1",
            "route_table_id": "rtb-0873d34119ec60045",
            "subnet_id": "subnet-07e6425a9d748e8d9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a348290b6bcbfd",
            "region": "us-east-1",
            "route_table_id": "rtb-0873d34119ec60045",
            "subnet_id": "subnet-0fd83ed712c10b1a9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d71450e539eda56",
            "region": "us-east-1",
            "route_table_id": "rtb-0873d34119ec60045",
            "subnet_id": "subnet-0aed2ad687c464c4f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0e43467c30a040d69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e43467c30a040d69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0a4f1245df58eb322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4f1245df58eb322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-05250494802d83d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05250494802d83d1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-07e6425a9d748e8d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e6425a9d748e8d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0fd83ed712c10b1a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd83ed712c10b1a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0aed2ad687c464c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aed2ad687c464c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c910834ec6b10460"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:vpc/vpc-0c910834ec6b10460",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc131ae34f1f0fd5",
            "default_route_table_id": "rtb-096e5e090be5197a4",
            "default_security_group_id": "sg-08894a54c69cfa023",
            "dhcp_options_id": "dopt-068646e6cde297c16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c910834ec6b10460",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096e5e090be5197a4",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-1",
              "Name": "vpc-1",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:network-acl/acl-035d80e6f4cc8fe6d",
            "default_network_acl_id": "acl-035d80e6f4cc8fe6d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-035d80e6f4cc8fe6d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "515966510834",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-04689c3404166e8b3",
              "subnet-048368cdc1381a1ce",
              "subnet-0d6f5c755abd2a2cf",
              "subnet-0dae8cb9030540e9b"
            ],
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-0e78bce5928c98fa4",
            "default_route_table_id": "rtb-0e78bce5928c98fa4",
            "id": "rtb-0e78bce5928c98fa4",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:security-group/sg-04f70bd89f07b5cd4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04f70bd89f07b5cd4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0165a4d9dbcee2d19",
            "arn": "arn:aws:ec2:us-east-1:515966510834:elastic-ip/eipalloc-0165a4d9dbcee2d19",
            "association_id": "eipassoc-02ea6ff2722bb5c18",
            "domain": "vpc",
            "id": "eipalloc-0165a4d9dbcee2d19",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e07965146980e84",
            "private_dns": "ip-172-0-101-137.ec2.internal",
            "private_ip": "172.0.101.137",
            "public_dns": "ec2-54-147-118-174.compute-1.amazonaws.com",
            "public_ip": "54.147.118.174",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b78b4f8c49add90",
            "arn": "arn:aws:ec2:us-east-1:515966510834:elastic-ip/eipalloc-04b78b4f8c49add90",
            "association_id": "eipassoc-0c5ab27d459213b71",
            "domain": "vpc",
            "id": "eipalloc-04b78b4f8c49add90",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0353216fd92be9173",
            "private_dns": "ip-172-0-102-90.ec2.internal",
            "private_ip": "172.0.102.90",
            "public_dns": "ec2-18-213-229-124.compute-1.amazonaws.com",
            "public_ip": "18.213.229.124",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:internet-gateway/igw-0d5a0f13aa089da56",
            "id": "igw-0d5a0f13aa089da56",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "dependencies": [
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0165a4d9dbcee2d19",
            "association_id": "eipassoc-02ea6ff2722bb5c18",
            "connectivity_type": "public",
            "id": "nat-0db0379ca5345c959",
            "network_interface_id": "eni-02e07965146980e84",
            "private_ip": "172.0.101.137",
            "public_ip": "54.147.118.174",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6f5c755abd2a2cf",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_eip.nat",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b78b4f8c49add90",
            "association_id": "eipassoc-0c5ab27d459213b71",
            "connectivity_type": "public",
            "id": "nat-00d9ee02512d67234",
            "network_interface_id": "eni-0353216fd92be9173",
            "private_ip": "172.0.102.90",
            "public_ip": "18.213.229.124",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04689c3404166e8b3",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_eip.nat",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d07fd76c21cf3c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0db0379ca5345c959",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04d07fd76c21cf3c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_eip.nat",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_nat_gateway.this",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3ddcedaae021a3f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00d9ee02512d67234",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3ddcedaae021a3f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_eip.nat",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_nat_gateway.this",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d5a0f13aa089da56",
            "id": "r-rtb-0a51874c8b9c856b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a51874c8b9c856b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_internet_gateway.this",
            "module.vpc_2.aws_route_table.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-04d07fd76c21cf3c1",
            "id": "rtb-04d07fd76c21cf3c1",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db0379ca5345c959",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
              }
            ],
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-0d3ddcedaae021a3f",
            "id": "rtb-0d3ddcedaae021a3f",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d9ee02512d67234",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db8563bb1cfdeef5"
              }
            ],
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:route-table/rtb-0a51874c8b9c856b3",
            "id": "rtb-0a51874c8b9c856b3",
            "owner_id": "515966510834",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5a0f13aa089da56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f4c76a9b70f00f4",
            "region": "us-east-1",
            "route_table_id": "rtb-04d07fd76c21cf3c1",
            "subnet_id": "subnet-0dae8cb9030540e9b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_subnet.private",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0181b3c98b787de17",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3ddcedaae021a3f",
            "subnet_id": "subnet-048368cdc1381a1ce"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_route_table.private",
            "module.vpc_2.aws_subnet.private",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbec50caa98e9237",
            "region": "us-east-1",
            "route_table_id": "rtb-0a51874c8b9c856b3",
            "subnet_id": "subnet-0d6f5c755abd2a2cf"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_route_table.public",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016ebe97ab1d2db31",
            "region": "us-east-1",
            "route_table_id": "rtb-0a51874c8b9c856b3",
            "subnet_id": "subnet-04689c3404166e8b3"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_route_table.public",
            "module.vpc_2.aws_subnet.public",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0dae8cb9030540e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dae8cb9030540e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-048368cdc1381a1ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048368cdc1381a1ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-0d6f5c755abd2a2cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6f5c755abd2a2cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:subnet/subnet-04689c3404166e8b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04689c3404166e8b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966510834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ac3a3a44d3f9a1ad"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_2.aws_vpc.this",
            "module.vpc_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966510834:vpc/vpc-0ac3a3a44d3f9a1ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-035d80e6f4cc8fe6d",
            "default_route_table_id": "rtb-0e78bce5928c98fa4",
            "default_security_group_id": "sg-04f70bd89f07b5cd4",
            "dhcp_options_id": "dopt-068646e6cde297c16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac3a3a44d3f9a1ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e78bce5928c98fa4",
            "owner_id": "515966510834",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod-VPC-2",
              "Name": "vpc-2",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}